# gosling-drive

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_TASK.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  Задание_на_КР_Бэкенд_разработка_2026 (1).docx  Текст.docx
alembic/: env.py
alembic/versions/: 20260508_0001_initial.py  20260508_0002_upload_session_version_metadata.py
app/: main.py
app/application/schemas/: access.py  audit.py  auth.py  files.py  folders.py  shares.py  uploads.py
app/application/services/: audit.py  object_keys.py  permissions.py
app/core/: config.py
app/domain/entities/: enums.py
app/infrastructure/database/: models.py
app/infrastructure/security/: passwords.py  tokens.py
app/infrastructure/storage/: s3.py
app/presentation/api/: dependencies.py
app/presentation/api/routers/: __init__.py  access.py  audit.py  auth.py  files.py  folders.py  (+4 more)
app/presentation/web/: router.py
docker/minio/: cors.json
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: add-resource-menu.tsx  auth-form.tsx  dashboard.tsx  file-list.tsx  folder-card.tsx  public-share.tsx  topbar.tsx  upload-card.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx
frontend/lib/: api.ts  auth.ts  upload.ts  utils.ts
output/: build_course_report.py  КР_Жданов_Гослинг_Drive_отчет.docx
output/playwright/: report_state.json  ui-selected-demo.txt
tests/: test_api_upload_flow.py  test_security_passwords.py  test_storage_helpers.py
(+6 files in other folders)
