[project]
name = "gosling-drive"
version = "0.1.0"
description = "Backend file storage for uni project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.3",
    "boto3==1.35.44",
    "email-validator==2.2.0",
    "fastapi==0.115.4",
    "jinja2==3.1.4",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
